--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script type="text/javascript"src="scriptpath.js"></script>
-<script type="text/javascript"src="ScriptCon.js"></script>
+<script type="text/javascript"src="script-con.js"></script>
 <script type="text/javascript"src="script.js"></script>
 <title style="text-align:center;">D&D Gamehub</title>
 <link rel="stylesheet" href="style.css"></link>
