Update on all fronts

--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
 </table>
 <!--                -->
 <!--     Logs       -->
-when "log" = "visible";
-	<p id=log> </p>
+<p class=log>AAAAAAA AAAAAAAAAAA AAAAAAAAAAAAAAA AAAA AAAAAAAAAAAAAAAAAAAAAAA AAAAAAAA AAAAAAAAAAAAAAAAA AAAAAAAAAAAAAAAAAAAAAAAAAAA AAAAAAAAAAAAGH</p>
 </body>
 
 </html>
