--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </table>
 <!--                -->
 <!--     Logs       -->
-<p class=log>AAAAAAA AAAAAAAAAAA AAAAAAAAAAAAAAA AAAA AAAAAAAAAAAAAAAAAAAAAAA AAAAAAAA AAAAAAAAAAAAAAAAA AAAAAAAAAAAAAAAAAAAAAAAAAAA AAAAAAAAAAAAGH</p>
+<p class=log></p>
 </body>
 
 </html>
