--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 </table>
 <!--                -->
 <!--     Logs       -->
-<p class=log>    </p>
+<p class='log'>    </p>
+<!--                -->
 </body>
 
 </html>
