--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<td>75</td>
 		<td>50</td>
 	</tr>
-		<tr>
+	<tr>
 		<td  id='class2'><button onclick="classClicked()" onclick="dwarfClicked()">Dwarf</button></td>
 		<td>75</td>
 		<td>25</td>
@@ -39,7 +39,7 @@
 		<td>10</td>
 		<td>75</td>
 	</tr>
-		<tr>
+	<tr>
 		<td id='class3'><button onclick="classClicked()" onclick="mageClicked()">Mage</button></td>
 		<td>5</td>
 		<td>20</td>
@@ -47,6 +47,15 @@
 		<td>100</td>
 		<td>25</td>
 	</tr>
+	<tr>
+		<td id='player'><input type="text" name="character"></td>
+		<td>20</td>
+		<td>20</td>
+		<td>20</td>
+		<td>20</td>
+		<td>20</td>
+	</tr>
+
 </table>
 
 <!--     Button     -->
