--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<th>Power</th>
 	</tr>
 	<tr>
-		<td id='class1'><button onclick="classClicked()" onclick="elfClicked()">Elf</button></td>
+		<td id='class1'><button onclick="elfClicked()">Elf</button></td>
 		<td>25</td>
 		<td>60</td>
 		<td>40</td>
@@ -32,7 +32,7 @@
 		<td>50</td>
 	</tr>
 	<tr>
-		<td  id='class2'><button onclick="classClicked()" onclick="dwarfClicked()">Dwarf</button></td>
+		<td  id='class2'><button onclick="dwarfClicked()">Dwarf</button></td>
 		<td>75</td>
 		<td>25</td>
 		<td>20</td>
@@ -40,7 +40,7 @@
 		<td>75</td>
 	</tr>
 	<tr>
-		<td id='class3'><button onclick="classClicked()" onclick="mageClicked()">Mage</button></td>
+		<td id='class3'><button onclick="mageClicked()">Mage</button></td>
 		<td>5</td>
 		<td>20</td>
 		<td>100</td>
@@ -49,11 +49,11 @@
 	</tr>
 	<tr>
 		<td id='player'><input type="text" name="character"></td>
-		<td id = "pS">20</td>
-		<td id = "pA">20</td>
-		<td id = "pM">20</td>
-		<td id = "pD">20</td>
-		<td id = "pP">20</td>
+		<td id = "ps">20</td>
+		<td id = "pa">20</td>
+		<td id = "pm">20</td>
+		<td id = "pd">20</td>
+		<td id = "pp">20</td>
 	</tr>
 
 </table>
